--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="./faveicons/favicon-16x16.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Pokédex</title>
 </head>
 <body>
-    
+    <img src="https://github.com/PokeAPI/sprites/blob/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="pokemon" class="pokemon_imagem">
+    <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
 </body>
 </html>
