--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./faveicons/favicon-16x16.png">
-    <link rel="stylesheet" href="./css/style.css">
+
+    <!-- fodase os links -->
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="./js/index.js"></script>
+    <link rel="icon" href="./faveicons/favicon-16x16.png">    
     <title>Pokédex</title>
 </head>
 <body>
-    <img src="https://github.com/PokeAPI/sprites/blob/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="pokemon" class="pokemon_imagem">
-    <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
+    <main>
+        <img src="#" alt="pokemon" class="pokemon_image">
+
+        <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
+
+        <h1 class="pokemon_data">
+            <span class="pokemon_number"></span> -
+            <span class="pokemon_name"></span>
+        </h1>
+        
+        <form class="form">
+            <input
+                type="search"
+                class="input_search"
+                placeholder="name or number
+                "
+                required
+            />
+        </form>
+        
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt;</button>
+            <button class="button btn-next">Next &gt;</button>
+        </div>
+    </main>
 </body>
 </html>
